# Matrix-Magiq-IMRT

./: Cargo.toml  README.md
docs/: GRANT_PROPOSAL.md
frontend/leptos-app/: Cargo.toml
frontend/leptos-app/src/components/: quantum_validator.rs
frontend/nextjs/: package.json
frontend/nextjs/rust-api/: Cargo.toml
frontend/nextjs/rust-api/src/: lib.rs  qvalidator.rs
jam/coordinator/: lib.rs
node/: Cargo.toml
pallets/qvalidator/src/: lib.rs
runtime/: Cargo.toml
src/QValidator/: lib.rs
src/QValidator/ActorX/: mod.rs
src/QValidator/JAM/Authorizer/: mod.rs
src/QValidator/JAM/Client/: mod.rs
src/pallet/: lib.rs
