[workspace]
members = [
    "node",
    "runtime",
    "pallets/imrt",
    "pallets/qvalidator",
    "pallets/qvalidator-jam",
    "pallets/qvalidator-jam-authorizer",
    "pallets/qvalidator-jam-client",
    "pallets/qvalidator-actorx",
    "telemetry",
]
resolver = "2"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
