[package]
name = "imrt-runtime"
version = "0.1.0"
authors = ["Matrix-Magiq Developers"]
description = "Immortality Chain Runtime Implementation"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = { version = "0.4.1", optional = true }
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { version = "3.2.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
smallvec = "1.10.0"

# Substrate
frame-system = { version = "22.0.0", default-features = false }
frame-support = { version = "22.0.0", default-features = false }
frame-executive = { version = "22.0.0", default-features = false }
frame-try-runtime = { version = "0.29.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "24.0.0", default-features = false, optional = true }
pallet-aura = { version = "22.0.0", default-features = false }
pallet-balances = { version = "22.0.0", default-features = false }
pallet-grandpa = { version = "22.0.0", default-features = false }
pallet-sudo = { version = "22.0.0", default-features = false }
pallet-timestamp = { version = "21.0.0", default-features = false }
pallet-transaction-payment = { version = "22.0.0", default-features = false }
sp-api = { version = "22.0.0", default-features = false }
sp-block-builder = { version = "22.0.0", default-features = false }
sp-consensus-aura = { version = "0.31.0", default-features = false }
sp-core = { version = "24.0.0", default-features = false }
sp-inherents = { version = "22.0.0", default-features = false }
sp-io = { version = "28.0.0", default-features = false }
sp-offchain = { version = "22.0.0", default-features = false }
sp-runtime = { version = "25.0.0", default-features = false }
sp-session = { version = "23.0.0", default-features = false }
sp-std = { version = "13.0.0", default-features = false }
sp-transaction-pool = { version = "22.0.0", default-features = false }
sp-version = { version = "23.0.0", default-features = false }

# IMRT specific dependencies
imrt-pallet = { path = "../pallets/imrt", default-features = false }
quantum-validator = { path = "../pallets/qvalidator", default-features = false }
qvalidator-jam = { path = "../pallets/qvalidator-jam", default-features = false }
qvalidator-jam-authorizer = { path = "../pallets/qvalidator-jam-authorizer", default-features = false }
qvalidator-jam-client = { path = "../pallets/qvalidator-jam-client", default-features = false }
qvalidator-actorx = { path = "../pallets/qvalidator-actorx", default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "imrt-pallet/std",
    "quantum-validator/std",
    "qvalidator-jam/std",
    "qvalidator-jam-authorizer/std",
    "qvalidator-jam-client/std",
    "qvalidator-actorx/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
]
